--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,9 @@
 name: MyceliumPlague
 main: com.gmail.mikeundead.MyceliumPlague
-version: 1.1
+version: 1.2
+author: ASC_Dreanor
 commands:
   rollback:
     description: Resets everything that has ever been spread on
     usage: /rollback
+    default: op
